# guccigedon

./: .clang-format  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  README.md  includes.cmake  main.cpp  run.sh  test.sh
assets/scenes/physics_test/: physics_test.blend1  physics_test.gltf  physics_test_transform_parent.gltf
assets/shaders/: default_shader.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  textured_mesh.frag.glsl  textured_mesh.vert.glsl
experiments/: CMakeLists.txt  logging_exp.cpp
include/assets/scene/: gltf_importer.h
include/assets/textures/: texture_importer.h
include/core/: input.h  logger.h  memory_tracker.h  sapfire_engine.h  types.h
include/gameplay/: camera.h  input_component.h  movement_component.h  transform.h  types.h
include/physics/: aabb.h  aabb_collider.h  intersect_data.h  physics_engine.h  physics_types.h  plane_collider.h  sphere_collider.h
include/render/vulkan/: builders.h  descriptor_allocator.h  descriptor_set_builder.h  device.h  image.h  instance.h  mesh.h  pipeline.h  primitives.h  renderer.h  scene.h  shader.h  surface.h  swapchain.h  types.h  vulkan_builders.h  vulkan_image.h  vulkan_mesh.h  vulkan_types.h
src/: main.cpp
src/assets/scene/: gltf_importer.cpp
src/assets/textures/: texture_importer.cpp
src/core/: core.h  input.cpp  logger.cpp  logger.h  memory_tracker.cpp  sapfire_engine.cpp  types.h
src/gameplay/: camera.cpp  input_component.cpp  movement_component.cpp  transform.cpp
src/physics/: aabb.cpp  aabb_collider.cpp  physics_engine.cpp  plane_collider.cpp  sphere_collider.cpp  sphere_collider.cpp~
src/render/: renderer.cpp  renderer.h  scene.cpp  vulkan_builders.cpp  vulkan_builders.h  vulkan_image.cpp  vulkan_image.h  vulkan_mesh.cpp  vulkan_mesh.h  vulkan_types.cpp  vulkan_types.h
src/render/vulkan/: builders.cpp  descriptor_allocator.cpp  descriptor_set_builder.cpp  device.cpp  image.cpp  instance.cpp  mesh.cpp  pipeline.cpp  renderer.cpp  scene.cpp  shader.cpp  surface.cpp  swapchain.cpp  types.cpp  vulkan_builders.cpp  vulkan_image.cpp  vulkan_mesh.cpp  vulkan_types.cpp
tests/: CMakeLists.txt  aabb_collider_test.cpp  physics_engine_test.cpp  plane_collider_test.cpp  sphere_collider_test.cpp  transform_test.cpp
